[package]
name = "ShitAccount"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-contract = { version = "0.2.1" }
url = "2.3"
alloy = { version = "0.2.1", features = ["full","node-bindings"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.3", features = ["derive"] }
tokio = { version= "1.38", features = ["rt-multi-thread", "macros"] }
toml = "0.8"
async-trait = "0.1.81"

# ethereum, evm
revm = { version = "13.0.0", default-features = false, features = [
  "std",
  "serde",
  "memory_limit",
  "optional_eip3607",
  "optional_block_gas_limit",
  "optional_no_base_fee",
  "arbitrary",
] }

foundry-config = { git = "https://github.com/foundry-rs/foundry"}
foundry-evm = { git = "https://github.com/foundry-rs/foundry"}